[package]
name = "HFT-Execution-Server"
version = "0.1.0"
edition = "2023"
description = "A High-Frequency Trading (HFT) execution server implemented in Rust, 
supporting Bybit and Binance exchanges."
license = "MIT"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
async-tungstenite = "0.15.0"
tungstenite = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_urlencoded = "0.7.0"
reqwest = { version = "0.11.6", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.5", features = ["serde", "v4"] }
log = "0.4.14"
env_logger = "0.9.0"
config = "0.11.0"
actix = "0.12.0"

[dev-dependencies]
tokio-test = "0.2.1"
futures = "0.3.18"


